# employee_api_rust

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2024-06-09-221054_employees/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/controllers/: employee_controller.rs  mod.rs
